# vocoder

./: .gitmodules  CMakeLists.txt  README.md
plugins/Vocoder/: CMakeLists.txt  DSP.cpp  DSP.hpp  DistrhoPluginInfo.h  Vocoder.cpp
plugins/voc/: CMakeLists.txt  DSP.cpp  DSP.hpp  DistrhoPluginInfo.h  voc.cpp
